--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion '29.0.2'
     defaultConfig {
-        applicationId "org.tensorflow.lite.examples.detection"
+        applicationId "org.tensorflow.lite.examples.signmaps"
         minSdkVersion 20
         targetSdkVersion 26
         versionCode 1
