--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="org.tensorflow.lite.examples.detection">
+    package="org.tensorflow.lite.examples.signmaps">
 
     <uses-sdk />
 
@@ -19,7 +19,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name=".DetectorActivity"
+            android:name="org.tensorflow.lite.examples.signmaps.DetectorActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
